# KnowledgeBased-Rag-API

./: .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 587dd353c1e3_add_total_tables_and_images.py
app/: main.py
app/ai/rag/: chunker.py  doc_partition.py  embedder.py  enhance_content.py  ingestion.py  retrieval.py  vector_store.py
app/api/: router.py
app/api/endpoints/: __init__.py  auth.py  chat.py  document.py
app/core/: __init__.py  config.py  dependencies.py  exceptions.py  logger.py  security.py
app/db/: __init__.py  create_tables.py  database.py
app/db/models/: __init__.py  api_logs.py  base.py  cache.py  chat.py  document.py  enums.py  events.py  logging.py  refresh_token.py  user.py
app/modules/: __init__.py  auth_service.py  chat_service.py  document_service.py
app/schemas/: __init__.py  chat.py  document.py  refresh_token.py  user.py
